<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:thumbTint="@color/red"
        android:text="@string/switch_text"
        android:textStyle="bold"
        android:id="@+id/switch1"
        app:layout_constraintEnd_toEndOf="@id/button_18"
        app:layout_constraintTop_toBottomOf="@id/button_18"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/button_1_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/button_2_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/button_3_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_4"
        app:layout_constraintStart_toEndOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/button_4_text"
        style="@style/ButtonsOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_5_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_6_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_7"
        app:layout_constraintStart_toEndOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_7_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintStart_toEndOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_8_text"
        style="@style/ButtonsOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_9_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_10"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_10_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_11"
        app:layout_constraintStart_toEndOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_11_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@id/button_12"
        app:layout_constraintStart_toEndOf="@+id/button_10"
        app:layout_constraintTop_toBottomOf="@id/button_7"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_12_text"
        style="@style/ButtonsOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_11"
        app:layout_constraintTop_toBottomOf="@id/button_8"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_13_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_14"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_9"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_14_text"
        style="@style/Buttons"
        app:layout_constraintEnd_toStartOf="@+id/button_15"
        app:layout_constraintStart_toEndOf="@id/button_13"
        app:layout_constraintTop_toBottomOf="@id/button_10"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_15_text"
        android:textAllCaps="false"
        style="@style/ButtonsOther"
        app:layout_constraintEnd_toStartOf="@id/button_16"
        app:layout_constraintStart_toEndOf="@+id/button_14"
        app:layout_constraintTop_toBottomOf="@id/button_11"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_16_text"
        style="@style/ButtonsOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_15"
        app:layout_constraintTop_toBottomOf="@id/button_12"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_17"
        style="@style/ButtonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_17_text"
        app:layout_constraintEnd_toStartOf="@id/button_18"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_13"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_18"
        style="@style/ButtonsOther"
        android:layout_width="@dimen/button_18_width"
        android:layout_height="wrap_content"
        android:text="@string/button_18_text"
        app:layout_constraintEnd_toEndOf="@id/button_16"
        app:layout_constraintStart_toStartOf="@id/button_14"
        app:layout_constraintTop_toBottomOf="@id/button_15"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textView_margin"
        android:layout_marginTop="@dimen/textView_margin"
        android:layout_marginEnd="@dimen/textView_margin"
        style="@style/text_View"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>